--- a/config/config.yaml
+++ b/config/config.yaml
@@ -117,3 +117,13 @@ platforms:
     name: "知乎"
   - id: "hupu"
     name: "虎扑"
+  - id: "cls-hot"
+    name: "财联社热门"
+  - id: "gelonghui"
+    name: "格隆汇"
+  - id: "xueqiu"
+    name: "雪球"
+  - id: "jin10"
+    name: "金十数据"
+  - id: "fastbull"
+    name: "快讯通"
